--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     </style>
     <link
       rel="stylesheet"
-      href="//at.alicdn.com/t/c/font_3891806_4kghfadnvpr.css"
+      href="https://at.alicdn.com/t/c/font_3891806_4kghfadnvpr.css"
     />
   </head>
   <body>
