--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
       }
       @media screen and (max-width: 426px) {
         html {
-          width: 500px;
+          min-width: 462px;
+          width: 100%;
         }
       }
     </style>
